# rustcast

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: copilot-instructions.md
resources/: app.manifest
src/: audio.rs  config.rs  encoder.rs  gui.rs  main.rs  opus_encoder.rs  server.rs  tray.rs
