[package]
name = "rustcast"
version = "0.1.0"
edition = "2021"
description = "Windows System Audio Streaming Server - Double-click and stream!"
authors = ["Kamilake"]
license = "MIT"

[dependencies]
# Windows Audio Capture (WASAPI)
cpal = "0.15"

# HTTP Server for streaming
tiny_http = "0.12"

# WebSocket for ultra-low latency streaming
tungstenite = "0.21"
sha1 = "0.10"
base64 = "0.22"

# Audio encoding
mp3lame-encoder = "0.2"     # MP3 (legacy, higher latency)
audiopus = "0.3.0-rc.0"     # Opus encoding (low latency)
ogg = "0.9"                 # Ogg container for Opus

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

# Async runtime
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# For Windows-specific features
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Foundation"] }
native-windows-gui = "1.0"
native-windows-derive = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true

# Windows build dependencies for embedding icon
[build-dependencies]
winres = "0.1"
